workspace: only load output configs on Wayland

They don't need to be loaded, or on exit saved again on X11

BUG: 488229